# tekken-coach

./: .gitignore  AGENT-REPORT.md  NOTICE  THIRD_PARTY_LICENSES  pyproject.toml  tekken8-coach-solution-summary.md
assets/framedata/: current
assets/framedata/curation/: paul.json
assets/framedata/snapshot-2026-07-07/: kazuya.json  manifest.json  paul.json
assets/framedata/snapshot-2026-07-18/: bryan.json  kazuya.json  manifest.json  paul.json  xiaoyu.json
assets/movemap/: anchors.json  bryan.json  index.json  kazuya.json  paul.json
assets/offsets/: 2.01.01.json  5.02.01.json  index.json  probe-manifest.json  state-map.json
assets/punishers/: kazuya.json  paul.json
docs/: 00-architecture.md  01-capture-modes.md  02-memory-reader.md  03-data-schemas.md  04-segmenter.md  05-frame-data-and-move-map.md  06-coaching-skill.md  07-output-and-cli.md  README.md  implementation-plan.md
samples/: sample-session.jsonl
skill/: SKILL.md
skill/references/: output-format.md  reading-the-log.md  rubric.md
src/tekken_coach/: __init__.py  schemas.py
src/tekken_coach/cli/: __init__.py  __main__.py  capture.py  config.py  orchestrate.py  render.py  source.py
src/tekken_coach/coach/: __init__.py  api.py  prompt.py
src/tekken_coach/framedata/: __init__.py  anchors.py  csv_normalize.py  ingest.py  input_recon.py  loader.py  models.py  movemap_audit.py  movemap_build.py  movemap_live.py  movemap_miner.py  movemap_report.py  moveset_decode.py  punishers.py  rubric.py  tally.py  xref.py
src/tekken_coach/reader/: __init__.py  capture.py  commands.py  decode.py  doctor.py  faults.py  input_probe.py  memory_source.py  monitor.py  moveset.py  moveset_walk.py  offsets.py  probe.py  slots.py  state.py  version.py  win_source.py
src/tekken_coach/reader/discovery/: __init__.py  basescan.py  builder.py  derive.py  heapscan.py  holderscan.py  manifest.py  moveset_anchor.py  moveset_scan.py  orchestrate.py  pe.py  report.py  scanners.py
src/tekken_coach/segment/: __init__.py  segmenter.py
src/tekken_coach/session/: __init__.py  store.py
tests/: factories.py  test_cli.py  test_cli_live_at_menu.py  test_cli_live_multimatch.py  test_cli_map_moves.py  test_cli_match_result.py  test_coach.py  test_framedata_ingest.py  test_framedata_input_recon.py  test_framedata_loader.py  test_framedata_normalize.py  test_framedata_tally.py  test_framedata_xref.py  test_movemap_anchors.py  test_movemap_audit.py  test_movemap_build.py  test_movemap_live.py  test_movemap_miner.py  test_movemap_report.py  test_moveset_decode.py  test_reader_c4e_acceptance.py  test_reader_c4h_acceptance.py  test_reader_c4i_acceptance.py  test_reader_capture.py  test_reader_commands.py  test_reader_decode.py  test_reader_decode_encoded.py  test_reader_discovery_basescan.py  test_reader_discovery_builder.py  test_reader_discovery_derive.py  test_reader_discovery_heapscan.py  test_reader_discovery_holderscan.py  test_reader_discovery_pe.py  test_reader_discovery_scanners.py  test_reader_doctor.py  test_reader_faults.py  test_reader_input_probe.py  test_reader_match_phase.py  test_reader_monitor.py  test_reader_moveset.py  (+15 more)
tests/fixtures/: README.md  __init__.py
tests/fixtures/coach/: __init__.py  builder.py
tests/fixtures/framedata/: f3-live-trace.jsonl  kazuya-mini.csv  live-run-1-slice.jsonl  paul-mini-patched.csv  paul-mini.csv
tests/fixtures/reader/: encode.py  flat_source.py  planted.py  planted_chain.py  planted_holder.py  planted_moveset.py  round-counter-bryan-paul.jsonl  state_map.py  ticking.py
tests/fixtures/segment/: __init__.py  streams.py
tests/fixtures/segment/goldens/: attacker_pressure_carry.json  blocked_no_punish.json  blocked_punished.json  clean_hit.json  counter_hit.json  dropped_frames_tolerated.json  dropped_frames_unreliable.json  heat_activation.json  knockdown_wakeup.json  mashed_into_counter.json  round_boundary_truncation.json  sidestep_whiff_punish.json  stagger_on_block.json  string_blocked_standing.json  string_ducked_high.json  string_interrupted.json  throw_broke.json  thrown.json
tests/spikes/: __init__.py  test_moveset_datamine.py
tests/spikes/moveset_datamine/: __init__.py  decoder.py  fixtures.py  validate.py
