[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tekken-coach"
version = "0.1.0"
description = "A read-only Tekken 8 coaching side-car: capture pipeline + coaching layer."
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Matthew Sullivan" }]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
tekken-coach = "tekken_coach.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tekken_coach"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
