[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tekken-coach"
version = "0.1.0"
description = "A read-only Tekken 8 coaching side-car: capture pipeline + coaching layer."
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Matthew Sullivan" }]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Windows-only capture backend (C4b). pymem is not a base dependency: the offline pipeline
# installs and tests without it (it is Windows-only and may not even install elsewhere). Install
# on a Windows machine with `pip install tekken-coach[windows]` to run smoke/doctor/capture.
windows = [
    "pymem>=1.13; sys_platform == 'win32'",
]

[project.scripts]
tekken-coach = "tekken_coach.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tekken_coach"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# pymem is the optional Windows-only capture backend (C4b). It ships no type stubs and is not
# installed in the offline/Linux environment, so mypy cannot resolve it there. The reader treats
# pymem's surface as untyped and normalizes its exceptions at the WinMemorySource seam.
[[tool.mypy.overrides]]
module = "pymem.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
